Bug 156096 - A11Y sidebar: Highlighted image keeps focus even after clicking elsewhere
Summary: A11Y sidebar: Highlighted image keeps focus even after clicking elsewhere
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
24.2.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Balázs Varga
URL:
Whiteboard: target:24.2.0 target:7.6.0.0.beta2
Keywords:
Depends on:
Blocks: Accessibility-Check
  Show dependency treegraph
 
Reported: 2023-06-29 10:26 UTC by Gabor Kelemen (Collabora)
Modified: 2023-07-03 10:40 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Example file from master (79.26 KB, application/vnd.oasis.opendocument.text)
2023-06-29 10:26 UTC, Gabor Kelemen (Collabora)
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Gabor Kelemen (Collabora) 2023-06-29 10:26:40 UTC
Created attachment 188127 [details]
Example file from master

Attached example file contains two images on two pages.
The A11Y sidebar complains about them missing the description.
Clicking on the link in the sidebar highlights the image and moves the view to it.
When clicking elsewhere in the text the highlighting is not removed, typing moves the view back to the image.

1. Open attached document
2. Open the A11Y sidebar
3. Click on the link about one of the images. The image gets selected and focused.
4. Scroll down or up in the document and click inside the text

-> the view jumps back to the image and typing goes into the same paragraph, not where you clicked.

Expected: the image loses highlight, view does not change when clicking into the text.

Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: da4c97968080707c91a15f53d07e6d062977b19a
CPU threads: 15; OS: Windows 10.0 Build 19045; UI render: Skia/Raster; VCL: win
Locale: hu-HU (hu_HU); UI: en-US
Calc: threaded
Comment 1 Gabor Kelemen (Collabora) 2023-06-29 10:49:52 UTC
Tried to bibisect under windows, got to this commit:

https://git.libreoffice.org/core/+/4f347ebabad6355014889f0a81b107dc774590fe

seems unrelated - but so far this seems to be where the A11Y sidebar started to show the warning about missing image description. Weird.
Comment 2 Commit Notification 2023-07-03 06:26:12 UTC
Balazs Varga committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/a89d05840e59c41b6122d551e4dfc26fd3ee515f

tdf#156096 - A11Y - Fix moving the cursor from selected frame object

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Commit Notification 2023-07-03 10:40:56 UTC
Balazs Varga committed a patch related to this issue.
It has been pushed to "libreoffice-7-6":

https://git.libreoffice.org/core/commit/aa553e6906d2f5ac99d30395e0d02ca7d861a0b7

tdf#156096 - A11Y - Fix moving the cursor from selected frame object

It will be available in 7.6.0.0.beta2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.