tdf#156096 - A11Y - Fix moving the cursor from selected frame object

after we 'GOTO' an a11y frame issue.

Change-Id: Ia828b2ac72edfc2045090d22ccdf3f95d1877170
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/153742
Tested-by: Jenkins
Reviewed-by: Samuel Mehrbrodt <samuel.mehrbrodt@allotropia.de>